Added language support js files

--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,70 @@
   "description": "Use jQuery to build Chrome extensions",
   "content_scripts": [
     {
-      "matches": ["http://ershadk.com/*"],
+      "matches": ["http://*/*"],
       "js": ["jquery.js", "jquery.ime.js",
         "jquery.ime.selector.js",
         "jquery.ime.preferences.js", 
-        "jquery.ime.inputmethods.js", "content.js"],
+        "jquery.ime.inputmethods.js",
+
+        "am-transliteration.js",
+        "as-avro.js",
+        "as-bornona.js",
+        "as-inscript.js",
+        "as-transliteration.js",
+        "be-latin.js",
+        "be-transliteration.js",
+        "ber-tfng.js",
+        "bn-avro.js",
+        "bn-inscript.js",
+        "bn-nkb.js",
+        "bn-probhat.js",
+        "brx-inscript.js",
+        "cyrl-palochka.js",
+        "de.js",
+        "eo-transliteration.js",
+        "gu-inscript.js",
+        "gu-transliteration.js",
+        "he-standard-2012-extonly.js",
+        "he-standard-2012.js",
+        "hi-bolnagri.js",
+        "hi-inscript.js",
+        "hi-transliteration.js",
+        "ka-transliteration.js",
+        "kn-inscript.js",
+        "kn-kgp.js",
+        "kn-transliteration.js",
+        "kok-inscript2.js",
+        "mai-inscript.js",
+        "ml-inscript.js",
+        "ml-transliteration.js",
+        "mr-inscript.js",
+        "mr-inscript2.js",
+        "mr-transliteration.js",
+        "ne-inscript.js",
+        "ne-inscript2.js",
+        "ne-transliteration.js",
+        "or-inscript.js",
+        "or-lekhani.js",
+        "or-transliteration.js",
+        "pa-inscript.js",
+        "pa-phonetic.js",
+        "pa-transliteration.js",
+        "ru-transliteration.js",
+        "sa-inscript.js",
+        "sa-inscript2.js",
+        "sa-transliteration.js",
+        "sah-transliteration.js",
+        "si-singlish.js",
+        "si-wijesekara.js",
+        "ta-99.js",
+        "ta-bamini.js",
+        "ta-inscript.js",
+        "ta-transliteration.js",
+        "te-inscript.js",
+        "te-transliteration.js",
+        "ur-transliteration.js",
+         "content.js"],
       "css":["jquery.ime.css"]
     }
   ],
