--- a/manifest.json
+++ b/manifest.json
@@ -71,5 +71,9 @@
       "css":["jquery.ime.css"]
     }
   ],
+  "web_accessible_resources": [
+    "images/ime-active.svg",
+    "images/tick.svg"
+  ],
   "manifest_version": 2
 }
