Added icon for the extension

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   }],
   "name": "Wikimedia input method extension",
   "version": "0.1",
+  "icons": { "128": "images/icon.png" },
   "description": "A chrome extension to automatically include jquery.ime library by Wikimedia Foundation for multilingual input",
   "content_scripts": [
     {
