Changed file structure. Updated jquery.ime lib from upstream

--- a/manifest.json
+++ b/manifest.json
@@ -10,77 +10,95 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["jquery.js", "jquery.ime.js",
-        "jquery.ime.selector.js",
-        "jquery.ime.preferences.js", 
-        "jquery.ime.inputmethods.js",
+      "js": [
+        "libs/jquery.js",
 
-        "rules/am-transliteration.js",
-        "rules/as-avro.js",
-        "rules/as-bornona.js",
-        "rules/as-inscript.js",
-        "rules/as-transliteration.js",
-        "rules/be-latin.js",
-        "rules/be-transliteration.js",
-        "rules/ber-tfng.js",
-        "rules/bn-avro.js",
-        "rules/bn-inscript.js",
-        "rules/bn-nkb.js",
-        "rules/bn-probhat.js",
-        "rules/brx-inscript.js",
-        "rules/cyrl-palochka.js",
-        "rules/de.js",
-        "rules/eo-transliteration.js",
-        "rules/gu-inscript.js",
-        "rules/gu-transliteration.js",
-        "rules/he-standard-2012-extonly.js",
-        "rules/he-standard-2012.js",
-        "rules/hi-bolnagri.js",
-        "rules/hi-inscript.js",
-        "rules/hi-transliteration.js",
-        "rules/ka-transliteration.js",
-        "rules/kn-inscript.js",
-        "rules/kn-kgp.js",
-        "rules/kn-transliteration.js",
-        "rules/kok-inscript2.js",
-        "rules/mai-inscript.js",
-        "rules/ml-inscript.js",
-        "rules/ml-transliteration.js",
-        "rules/mr-inscript.js",
-        "rules/mr-inscript2.js",
-        "rules/mr-transliteration.js",
-        "rules/ne-inscript.js",
-        "rules/ne-inscript2.js",
-        "rules/ne-transliteration.js",
-        "rules/or-inscript.js",
-        "rules/or-lekhani.js",
-        "rules/or-transliteration.js",
-        "rules/pa-inscript.js",
-        "rules/pa-phonetic.js",
-        "rules/pa-transliteration.js",
-        "rules/ru-transliteration.js",
-        "rules/sa-inscript.js",
-        "rules/sa-inscript2.js",
-        "rules/sa-transliteration.js",
-        "rules/sah-transliteration.js",
-        "rules/si-singlish.js",
-        "rules/si-wijesekara.js",
-        "rules/ta-99.js",
-        "rules/ta-bamini.js",
-        "rules/ta-inscript.js",
-        "rules/ta-transliteration.js",
-        "rules/te-inscript.js",
-        "rules/te-transliteration.js",
-        "rules/ur-transliteration.js",
-         "content.js"],
-      "css":["jquery.ime.css"]
+        "src/jquery.ime.js",
+        "src/jquery.ime.inputmethods.js",
+        "src/jquery.ime.preferences.js",
+        "src/jquery.ime.selector.js",
+
+        "rules/am/am-transliteration.js",
+        "rules/as/as-avro.js",
+        "rules/as/as-bornona.js",
+        "rules/as/as-inscript.js",
+        "rules/as/as-transliteration.js",
+        "rules/be/be-latin.js",
+        "rules/be/be-transliteration.js",
+        "rules/ber/ber-tfng.js",
+        "rules/bn/bn-avro.js",
+        "rules/bn/bn-inscript.js",
+        "rules/bn/bn-nkb.js",
+        "rules/bn/bn-probhat.js",
+        "rules/brx/brx-inscript.js",
+        "rules/cyrl/cyrl-palochka.js",
+        "rules/da/da-normforms.js",
+        "rules/de/de.js",
+        "rules/eo/eo-transliteration.js",
+        "rules/fi/fi-transliteration.js",
+        "rules/fo/fo-normforms.js",
+        "rules/gu/gu-inscript.js",
+        "rules/gu/gu-transliteration.js",
+        "rules/he/he-standard-2012-extonly.js",
+        "rules/he/he-standard-2012.js",
+        "rules/hi/hi-bolnagri.js",
+        "rules/hi/hi-inscript.js",
+        "rules/hi/hi-transliteration.js",
+        "rules/is/is-normforms.js",
+        "rules/jv/jv-transliteration.js",
+        "rules/ka/ka-transliteration.js",
+        "rules/kn/kn-inscript.js",
+        "rules/kn/kn-kgp.js",
+        "rules/kn/kn-transliteration.js",
+        "rules/kok/kok-inscript2.js",
+        "rules/mai/mai-inscript.js",
+        "rules/ml/ml-inscript.js",
+        "rules/ml/ml-transliteration.js",
+        "rules/mn/mn-cyrl.js",
+        "rules/mr/mr-inscript.js",
+        "rules/mr/mr-inscript2.js",
+        "rules/mr/mr-transliteration.js",
+        "rules/ne/ne-inscript.js",
+        "rules/ne/ne-inscript2.js",
+        "rules/ne/ne-transliteration.js",
+        "rules/no/no-normforms.js",
+        "rules/no/no-tildeforms.js",
+        "rules/or/or-inscript.js",
+        "rules/or/or-lekhani.js",
+        "rules/or/or-transliteration.js",
+        "rules/pa/pa-inscript.js",
+        "rules/pa/pa-phonetic.js",
+        "rules/pa/pa-transliteration.js",
+        "rules/ru/ru-jcuken.js",
+        "rules/sa/sa-inscript.js",
+        "rules/sa/sa-inscript2.js",
+        "rules/sa/sa-transliteration.js",
+        "rules/sah/sah-transliteration.js",
+        "rules/se/se-normforms.js",
+        "rules/si/si-singlish.js",
+        "rules/si/si-wijesekara.js",
+        "rules/sv/sv-normforms.js",
+        "rules/ta/ta-99.js",
+        "rules/ta/ta-bamini.js",
+        "rules/ta/ta-inscript.js",
+        "rules/ta/ta-transliteration.js",
+        "rules/te/te-inscript.js",
+        "rules/te/te-transliteration.js",
+        "rules/ur/ur-transliteration.js",
+
+        "src/content.js"
+        ],
+      "css":["css/jquery.ime.css"]
     }
   ],
   "web_accessible_resources": [
-    "images/ime-active.svg",
-    "images/tick.svg",
+    "images/icon.png",
     "images/ime-active.png",
-    "images/tick.png"
+    "images/ime-active.svg",
+    "images/ime-inactive.png",
+    "images/ime-inactive.svg",
+    "images/tick.png",
+    "images/tick.svg"
   ],
   "manifest_version": 2
 }
