--- a/manifest.json
+++ b/manifest.json
@@ -11,94 +11,91 @@
     {
       "matches": ["http://*/*", "https://*/*"],
       "js": [
-        "libs/jquery.js",
+        "libs/jquery.ime/libs/jquery.js",
 
-        "src/jquery.ime.js",
-        "src/jquery.ime.inputmethods.js",
-        "src/jquery.ime.preferences.js",
-        "src/jquery.ime.selector.js",
+        "libs/jquery.ime/src/jquery.ime.js",
+        "libs/jquery.ime/src/jquery.ime.inputmethods.js",
+        "libs/jquery.ime/src/jquery.ime.preferences.js",
+        "libs/jquery.ime/src/jquery.ime.selector.js",
 
-        "rules/am/am-transliteration.js",
-        "rules/as/as-avro.js",
-        "rules/as/as-bornona.js",
-        "rules/as/as-inscript.js",
-        "rules/as/as-transliteration.js",
-        "rules/be/be-latin.js",
-        "rules/be/be-transliteration.js",
-        "rules/ber/ber-tfng.js",
-        "rules/bn/bn-avro.js",
-        "rules/bn/bn-inscript.js",
-        "rules/bn/bn-nkb.js",
-        "rules/bn/bn-probhat.js",
-        "rules/brx/brx-inscript.js",
-        "rules/cyrl/cyrl-palochka.js",
-        "rules/da/da-normforms.js",
-        "rules/de/de.js",
-        "rules/eo/eo-transliteration.js",
-        "rules/fi/fi-transliteration.js",
-        "rules/fo/fo-normforms.js",
-        "rules/gu/gu-inscript.js",
-        "rules/gu/gu-transliteration.js",
-        "rules/he/he-standard-2012-extonly.js",
-        "rules/he/he-standard-2012.js",
-        "rules/hi/hi-bolnagri.js",
-        "rules/hi/hi-inscript.js",
-        "rules/hi/hi-transliteration.js",
-        "rules/is/is-normforms.js",
-        "rules/jv/jv-transliteration.js",
-        "rules/ka/ka-transliteration.js",
-        "rules/kn/kn-inscript.js",
-        "rules/kn/kn-kgp.js",
-        "rules/kn/kn-transliteration.js",
-        "rules/kok/kok-inscript2.js",
-        "rules/mai/mai-inscript.js",
-        "rules/ml/ml-inscript.js",
-        "rules/ml/ml-transliteration.js",
-        "rules/mn/mn-cyrl.js",
-        "rules/mr/mr-inscript.js",
-        "rules/mr/mr-inscript2.js",
-        "rules/mr/mr-transliteration.js",
-        "rules/ne/ne-inscript.js",
-        "rules/ne/ne-inscript2.js",
-        "rules/ne/ne-transliteration.js",
-        "rules/no/no-normforms.js",
-        "rules/no/no-tildeforms.js",
-        "rules/or/or-inscript.js",
-        "rules/or/or-lekhani.js",
-        "rules/or/or-transliteration.js",
-        "rules/pa/pa-inscript.js",
-        "rules/pa/pa-phonetic.js",
-        "rules/pa/pa-transliteration.js",
-        "rules/ru/ru-jcuken.js",
-        "rules/sa/sa-inscript.js",
-        "rules/sa/sa-inscript2.js",
-        "rules/sa/sa-transliteration.js",
-        "rules/sah/sah-transliteration.js",
-        "rules/se/se-normforms.js",
-        "rules/si/si-singlish.js",
-        "rules/si/si-wijesekara.js",
-        "rules/sv/sv-normforms.js",
-        "rules/ta/ta-99.js",
-        "rules/ta/ta-bamini.js",
-        "rules/ta/ta-inscript.js",
-        "rules/ta/ta-transliteration.js",
-        "rules/te/te-inscript.js",
-        "rules/te/te-transliteration.js",
-        "rules/ur/ur-transliteration.js",
+        "libs/jquery.ime/rules/am/am-transliteration.js",
+        "libs/jquery.ime/rules/as/as-avro.js",
+        "libs/jquery.ime/rules/as/as-bornona.js",
+        "libs/jquery.ime/rules/as/as-inscript.js",
+        "libs/jquery.ime/rules/as/as-transliteration.js",
+        "libs/jquery.ime/rules/be/be-latin.js",
+        "libs/jquery.ime/rules/be/be-transliteration.js",
+        "libs/jquery.ime/rules/ber/ber-tfng.js",
+        "libs/jquery.ime/rules/bn/bn-avro.js",
+        "libs/jquery.ime/rules/bn/bn-inscript.js",
+        "libs/jquery.ime/rules/bn/bn-nkb.js",
+        "libs/jquery.ime/rules/bn/bn-probhat.js",
+        "libs/jquery.ime/rules/brx/brx-inscript.js",
+        "libs/jquery.ime/rules/cyrl/cyrl-palochka.js",
+        "libs/jquery.ime/rules/da/da-normforms.js",
+        "libs/jquery.ime/rules/de/de.js",
+        "libs/jquery.ime/rules/eo/eo-transliteration.js",
+        "libs/jquery.ime/rules/fi/fi-transliteration.js",
+        "libs/jquery.ime/rules/fo/fo-normforms.js",
+        "libs/jquery.ime/rules/gu/gu-inscript.js",
+        "libs/jquery.ime/rules/gu/gu-transliteration.js",
+        "libs/jquery.ime/rules/he/he-standard-2012-extonly.js",
+        "libs/jquery.ime/rules/he/he-standard-2012.js",
+        "libs/jquery.ime/rules/hi/hi-bolnagri.js",
+        "libs/jquery.ime/rules/hi/hi-inscript.js",
+        "libs/jquery.ime/rules/hi/hi-transliteration.js",
+        "libs/jquery.ime/rules/is/is-normforms.js",
+        "libs/jquery.ime/rules/jv/jv-transliteration.js",
+        "libs/jquery.ime/rules/ka/ka-transliteration.js",
+        "libs/jquery.ime/rules/kn/kn-inscript.js",
+        "libs/jquery.ime/rules/kn/kn-kgp.js",
+        "libs/jquery.ime/rules/kn/kn-transliteration.js",
+        "libs/jquery.ime/rules/kok/kok-inscript2.js",
+        "libs/jquery.ime/rules/mai/mai-inscript.js",
+        "libs/jquery.ime/rules/ml/ml-inscript.js",
+        "libs/jquery.ime/rules/ml/ml-transliteration.js",
+        "libs/jquery.ime/rules/mn/mn-cyrl.js",
+        "libs/jquery.ime/rules/mr/mr-inscript.js",
+        "libs/jquery.ime/rules/mr/mr-inscript2.js",
+        "libs/jquery.ime/rules/mr/mr-transliteration.js",
+        "libs/jquery.ime/rules/ne/ne-inscript.js",
+        "libs/jquery.ime/rules/ne/ne-inscript2.js",
+        "libs/jquery.ime/rules/ne/ne-transliteration.js",
+        "libs/jquery.ime/rules/no/no-normforms.js",
+        "libs/jquery.ime/rules/no/no-tildeforms.js",
+        "libs/jquery.ime/rules/or/or-inscript.js",
+        "libs/jquery.ime/rules/or/or-lekhani.js",
+        "libs/jquery.ime/rules/or/or-transliteration.js",
+        "libs/jquery.ime/rules/pa/pa-inscript.js",
+        "libs/jquery.ime/rules/pa/pa-phonetic.js",
+        "libs/jquery.ime/rules/pa/pa-transliteration.js",
+        "libs/jquery.ime/rules/ru/ru-jcuken.js",
+        "libs/jquery.ime/rules/sa/sa-inscript.js",
+        "libs/jquery.ime/rules/sa/sa-inscript2.js",
+        "libs/jquery.ime/rules/sa/sa-transliteration.js",
+        "libs/jquery.ime/rules/sah/sah-transliteration.js",
+        "libs/jquery.ime/rules/se/se-normforms.js",
+        "libs/jquery.ime/rules/si/si-singlish.js",
+        "libs/jquery.ime/rules/si/si-wijesekara.js",
+        "libs/jquery.ime/rules/sv/sv-normforms.js",
+        "libs/jquery.ime/rules/ta/ta-99.js",
+        "libs/jquery.ime/rules/ta/ta-bamini.js",
+        "libs/jquery.ime/rules/ta/ta-inscript.js",
+        "libs/jquery.ime/rules/ta/ta-transliteration.js",
+        "libs/jquery.ime/rules/te/te-inscript.js",
+        "libs/jquery.ime/rules/te/te-transliteration.js",
+        "libs/jquery.ime/rules/ur/ur-transliteration.js",
 
         "src/content.js"
         ],
-      "css":["css/jquery.ime.css"]
+      "css":["libs/jquery.ime/css/jquery.ime.css"]
     }
   ],
   "web_accessible_resources": [
     "images/icon.png",
     "images/ime-active.png",
-    "images/ime-active.svg",
     "images/ime-inactive.png",
-    "images/ime-inactive.svg",
-    "images/tick.png",
-    "images/tick.svg"
+    "images/tick.png"
   ],
   "manifest_version": 2
 }
